# appwave

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/migrations/20230714145944_init/: migration.sql
stacks/: traefik-host.yml
templates/: base.html.j2  build_logs.html.j2  deploy.html.j2
