[tool.poetry]
name = "swarm-manager"
version = "0.1.0"
description = ""
authors = ["Vitor Daniel <vitor036daniel@gmail.com>"]
readme = "README.md"
packages = [{include = "swarm_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
docker = "^6.1.3"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
